<?xml version="1.0"?>
<package>
  <name>task</name>
  <version>0.1.0</version>
  <description>The task package</description>

  <maintainer email="molodan@mit.edu">Diana Molodan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend> message_generation</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python-numpy</run_depend>

  <test_depend>rosunit</test_depend>
</package>
